mp5/student.output
   0  $accept : %entry% $end

   1  main : expression DSEMI
   2       | LET IDENT EQUALS expression DSEMI
   3       | LET REC IDENT IDENT EQUALS expression DSEMI

   4  expression : atomic_expression
   5             | LPAREN expression RPAREN
   6             | LPAREN expression COMMA expression RPAREN
   7             | NEG expression
   8             | HEAD expression
   9             | TAIL expression
  10             | FST expression
  11             | SND expression
  12             | expression PLUS expression
  13             | expression MINUS expression
  14             | expression DIV expression
  15             | expression TIMES expression
  16             | expression DPLUS expression
  17             | expression DMINUS expression
  18             | expression DDIV expression
  19             | expression DTIMES expression
  20             | expression LT expression
  21             | expression GT expression
  22             | expression EQUALS expression
  23             | expression LEQ expression
  24             | expression GEQ expression
  25             | expression DCOLON expression
  26             | LET IDENT EQUALS expression IN expression
  27             | LET REC IDENT IDENT EQUALS expression IN expression
  28             | expression expression
  29             | expression LOGICALAND expression
  30             | expression LOGICALOR expression
  31             | FUN IDENT ARROW expression
  32             | IF expression THEN expression ELSE expression
  33             | RAISE expression

  34  pat : UNDERSCORE
  35      | INT

  36  atomic_expression : IDENT
  37                    | INT
  38                    | FLOAT
  39                    | STRING
  40                    | UNIT
  41                    | TRUE
  42                    | FALSE
  43                    | NIL

  44  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (44)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	NIL  shift 10
	LET  shift 11
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	LPAREN  shift 15
	UNIT  shift 16
	HEAD  shift 17
	TAIL  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	main  goto 21
	expression  goto 22
	atomic_expression  goto 23


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expression : INT .  (37)

	.  reduce 37


state 4
	atomic_expression : FLOAT .  (38)

	.  reduce 38


state 5
	atomic_expression : STRING .  (39)

	.  reduce 39


state 6
	atomic_expression : IDENT .  (36)

	.  reduce 36


state 7
	atomic_expression : TRUE .  (41)

	.  reduce 41


state 8
	atomic_expression : FALSE .  (42)

	.  reduce 42


state 9
	expression : NEG . expression  (7)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	NIL  shift 10
	LET  shift 24
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	LPAREN  shift 15
	UNIT  shift 16
	HEAD  shift 17
	TAIL  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	expression  goto 25
	atomic_expression  goto 23


state 10
	atomic_expression : NIL .  (43)

	.  reduce 43


state 11
	main : LET . IDENT EQUALS expression DSEMI  (2)
	main : LET . REC IDENT IDENT EQUALS expression DSEMI  (3)
	expression : LET . IDENT EQUALS expression IN expression  (26)
	expression : LET . REC IDENT IDENT EQUALS expression IN expression  (27)

	IDENT  shift 26
	REC  shift 27
	.  error


state 12
	expression : IF . expression THEN expression ELSE expression  (32)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	NIL  shift 10
	LET  shift 24
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	LPAREN  shift 15
	UNIT  shift 16
	HEAD  shift 17
	TAIL  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	expression  goto 28
	atomic_expression  goto 23


state 13
	expression : FUN . IDENT ARROW expression  (31)

	IDENT  shift 29
	.  error


state 14
	expression : RAISE . expression  (33)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	NIL  shift 10
	LET  shift 24
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	LPAREN  shift 15
	UNIT  shift 16
	HEAD  shift 17
	TAIL  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	expression  goto 30
	atomic_expression  goto 23


state 15
	expression : LPAREN . expression RPAREN  (5)
	expression : LPAREN . expression COMMA expression RPAREN  (6)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	NIL  shift 10
	LET  shift 24
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	LPAREN  shift 15
	UNIT  shift 16
	HEAD  shift 17
	TAIL  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	expression  goto 31
	atomic_expression  goto 23


state 16
	atomic_expression : UNIT .  (40)

	.  reduce 40


state 17
	expression : HEAD . expression  (8)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	NIL  shift 10
	LET  shift 24
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	LPAREN  shift 15
	UNIT  shift 16
	HEAD  shift 17
	TAIL  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	expression  goto 32
	atomic_expression  goto 23


state 18
	expression : TAIL . expression  (9)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	NIL  shift 10
	LET  shift 24
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	LPAREN  shift 15
	UNIT  shift 16
	HEAD  shift 17
	TAIL  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	expression  goto 33
	atomic_expression  goto 23


state 19
	expression : FST . expression  (10)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	NIL  shift 10
	LET  shift 24
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	LPAREN  shift 15
	UNIT  shift 16
	HEAD  shift 17
	TAIL  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	expression  goto 34
	atomic_expression  goto 23


state 20
	expression : SND . expression  (11)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	NIL  shift 10
	LET  shift 24
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	LPAREN  shift 15
	UNIT  shift 16
	HEAD  shift 17
	TAIL  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	expression  goto 35
	atomic_expression  goto 23


state 21
	%entry% : '\001' main .  (44)

	.  reduce 44


state 22
	main : expression . DSEMI  (1)
	expression : expression . PLUS expression  (12)
	expression : expression . MINUS expression  (13)
	expression : expression . DIV expression  (14)
	expression : expression . TIMES expression  (15)
	expression : expression . DPLUS expression  (16)
	expression : expression . DMINUS expression  (17)
	expression : expression . DDIV expression  (18)
	expression : expression . DTIMES expression  (19)
	expression : expression . LT expression  (20)
	expression : expression . GT expression  (21)
	expression : expression . EQUALS expression  (22)
	expression : expression . LEQ expression  (23)
	expression : expression . GEQ expression  (24)
	expression : expression . DCOLON expression  (25)
	expression : expression . expression  (28)
	expression : expression . LOGICALAND expression  (29)
	expression : expression . LOGICALOR expression  (30)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	PLUS  shift 36
	MINUS  shift 37
	TIMES  shift 38
	DIV  shift 39
	DPLUS  shift 40
	DMINUS  shift 41
	DTIMES  shift 42
	DDIV  shift 43
	LT  shift 44
	GT  shift 45
	LEQ  shift 46
	GEQ  shift 47
	EQUALS  shift 48
	DSEMI  shift 49
	DCOLON  shift 50
	NIL  shift 10
	LET  shift 24
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	LOGICALAND  shift 51
	LOGICALOR  shift 52
	LPAREN  shift 15
	UNIT  shift 16
	HEAD  shift 17
	TAIL  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	expression  goto 53
	atomic_expression  goto 23


state 23
	expression : atomic_expression .  (4)

	.  reduce 4


state 24
	expression : LET . IDENT EQUALS expression IN expression  (26)
	expression : LET . REC IDENT IDENT EQUALS expression IN expression  (27)

	IDENT  shift 54
	REC  shift 55
	.  error


25: shift/reduce conflict (shift 3, reduce 7) on INT
25: shift/reduce conflict (shift 4, reduce 7) on FLOAT
25: shift/reduce conflict (shift 5, reduce 7) on STRING
25: shift/reduce conflict (shift 6, reduce 7) on IDENT
25: shift/reduce conflict (shift 7, reduce 7) on TRUE
25: shift/reduce conflict (shift 8, reduce 7) on FALSE
25: shift/reduce conflict (shift 9, reduce 7) on NEG
25: shift/reduce conflict (shift 36, reduce 7) on PLUS
25: shift/reduce conflict (shift 37, reduce 7) on MINUS
25: shift/reduce conflict (shift 38, reduce 7) on TIMES
25: shift/reduce conflict (shift 39, reduce 7) on DIV
25: shift/reduce conflict (shift 40, reduce 7) on DPLUS
25: shift/reduce conflict (shift 41, reduce 7) on DMINUS
25: shift/reduce conflict (shift 42, reduce 7) on DTIMES
25: shift/reduce conflict (shift 43, reduce 7) on DDIV
25: shift/reduce conflict (shift 44, reduce 7) on LT
25: shift/reduce conflict (shift 45, reduce 7) on GT
25: shift/reduce conflict (shift 46, reduce 7) on LEQ
25: shift/reduce conflict (shift 47, reduce 7) on GEQ
25: shift/reduce conflict (shift 48, reduce 7) on EQUALS
25: shift/reduce conflict (shift 50, reduce 7) on DCOLON
25: shift/reduce conflict (shift 10, reduce 7) on NIL
25: shift/reduce conflict (shift 24, reduce 7) on LET
25: shift/reduce conflict (shift 12, reduce 7) on IF
25: shift/reduce conflict (shift 13, reduce 7) on FUN
25: shift/reduce conflict (shift 14, reduce 7) on RAISE
25: shift/reduce conflict (shift 51, reduce 7) on LOGICALAND
25: shift/reduce conflict (shift 52, reduce 7) on LOGICALOR
25: shift/reduce conflict (shift 15, reduce 7) on LPAREN
25: shift/reduce conflict (shift 16, reduce 7) on UNIT
25: shift/reduce conflict (shift 17, reduce 7) on HEAD
25: shift/reduce conflict (shift 18, reduce 7) on TAIL
25: shift/reduce conflict (shift 19, reduce 7) on FST
25: shift/reduce conflict (shift 20, reduce 7) on SND
state 25
	expression : NEG expression .  (7)
	expression : expression . PLUS expression  (12)
	expression : expression . MINUS expression  (13)
	expression : expression . DIV expression  (14)
	expression : expression . TIMES expression  (15)
	expression : expression . DPLUS expression  (16)
	expression : expression . DMINUS expression  (17)
	expression : expression . DDIV expression  (18)
	expression : expression . DTIMES expression  (19)
	expression : expression . LT expression  (20)
	expression : expression . GT expression  (21)
	expression : expression . EQUALS expression  (22)
	expression : expression . LEQ expression  (23)
	expression : expression . GEQ expression  (24)
	expression : expression . DCOLON expression  (25)
	expression : expression . expression  (28)
	expression : expression . LOGICALAND expression  (29)
	expression : expression . LOGICALOR expression  (30)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	PLUS  shift 36
	MINUS  shift 37
	TIMES  shift 38
	DIV  shift 39
	DPLUS  shift 40
	DMINUS  shift 41
	DTIMES  shift 42
	DDIV  shift 43
	LT  shift 44
	GT  shift 45
	LEQ  shift 46
	GEQ  shift 47
	EQUALS  shift 48
	DCOLON  shift 50
	NIL  shift 10
	LET  shift 24
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	LOGICALAND  shift 51
	LOGICALOR  shift 52
	LPAREN  shift 15
	UNIT  shift 16
	HEAD  shift 17
	TAIL  shift 18
	FST  shift 19
	SND  shift 20
	DSEMI  reduce 7
	IN  reduce 7
	THEN  reduce 7
	ELSE  reduce 7
	RPAREN  reduce 7
	COMMA  reduce 7

	expression  goto 53
	atomic_expression  goto 23


state 26
	main : LET IDENT . EQUALS expression DSEMI  (2)
	expression : LET IDENT . EQUALS expression IN expression  (26)

	EQUALS  shift 56
	.  error


state 27
	main : LET REC . IDENT IDENT EQUALS expression DSEMI  (3)
	expression : LET REC . IDENT IDENT EQUALS expression IN expression  (27)

	IDENT  shift 57
	.  error


state 28
	expression : expression . PLUS expression  (12)
	expression : expression . MINUS expression  (13)
	expression : expression . DIV expression  (14)
	expression : expression . TIMES expression  (15)
	expression : expression . DPLUS expression  (16)
	expression : expression . DMINUS expression  (17)
	expression : expression . DDIV expression  (18)
	expression : expression . DTIMES expression  (19)
	expression : expression . LT expression  (20)
	expression : expression . GT expression  (21)
	expression : expression . EQUALS expression  (22)
	expression : expression . LEQ expression  (23)
	expression : expression . GEQ expression  (24)
	expression : expression . DCOLON expression  (25)
	expression : expression . expression  (28)
	expression : expression . LOGICALAND expression  (29)
	expression : expression . LOGICALOR expression  (30)
	expression : IF expression . THEN expression ELSE expression  (32)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	PLUS  shift 36
	MINUS  shift 37
	TIMES  shift 38
	DIV  shift 39
	DPLUS  shift 40
	DMINUS  shift 41
	DTIMES  shift 42
	DDIV  shift 43
	LT  shift 44
	GT  shift 45
	LEQ  shift 46
	GEQ  shift 47
	EQUALS  shift 48
	DCOLON  shift 50
	NIL  shift 10
	LET  shift 24
	IF  shift 12
	THEN  shift 58
	FUN  shift 13
	RAISE  shift 14
	LOGICALAND  shift 51
	LOGICALOR  shift 52
	LPAREN  shift 15
	UNIT  shift 16
	HEAD  shift 17
	TAIL  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	expression  goto 53
	atomic_expression  goto 23


state 29
	expression : FUN IDENT . ARROW expression  (31)

	ARROW  shift 59
	.  error


30: shift/reduce conflict (shift 3, reduce 33) on INT
30: shift/reduce conflict (shift 4, reduce 33) on FLOAT
30: shift/reduce conflict (shift 5, reduce 33) on STRING
30: shift/reduce conflict (shift 6, reduce 33) on IDENT
30: shift/reduce conflict (shift 7, reduce 33) on TRUE
30: shift/reduce conflict (shift 8, reduce 33) on FALSE
30: shift/reduce conflict (shift 9, reduce 33) on NEG
30: shift/reduce conflict (shift 36, reduce 33) on PLUS
30: shift/reduce conflict (shift 37, reduce 33) on MINUS
30: shift/reduce conflict (shift 38, reduce 33) on TIMES
30: shift/reduce conflict (shift 39, reduce 33) on DIV
30: shift/reduce conflict (shift 40, reduce 33) on DPLUS
30: shift/reduce conflict (shift 41, reduce 33) on DMINUS
30: shift/reduce conflict (shift 42, reduce 33) on DTIMES
30: shift/reduce conflict (shift 43, reduce 33) on DDIV
30: shift/reduce conflict (shift 44, reduce 33) on LT
30: shift/reduce conflict (shift 45, reduce 33) on GT
30: shift/reduce conflict (shift 46, reduce 33) on LEQ
30: shift/reduce conflict (shift 47, reduce 33) on GEQ
30: shift/reduce conflict (shift 48, reduce 33) on EQUALS
30: shift/reduce conflict (shift 50, reduce 33) on DCOLON
30: shift/reduce conflict (shift 10, reduce 33) on NIL
30: shift/reduce conflict (shift 24, reduce 33) on LET
30: shift/reduce conflict (shift 12, reduce 33) on IF
30: shift/reduce conflict (shift 13, reduce 33) on FUN
30: shift/reduce conflict (shift 14, reduce 33) on RAISE
30: shift/reduce conflict (shift 51, reduce 33) on LOGICALAND
30: shift/reduce conflict (shift 52, reduce 33) on LOGICALOR
30: shift/reduce conflict (shift 15, reduce 33) on LPAREN
30: shift/reduce conflict (shift 16, reduce 33) on UNIT
30: shift/reduce conflict (shift 17, reduce 33) on HEAD
30: shift/reduce conflict (shift 18, reduce 33) on TAIL
30: shift/reduce conflict (shift 19, reduce 33) on FST
30: shift/reduce conflict (shift 20, reduce 33) on SND
state 30
	expression : expression . PLUS expression  (12)
	expression : expression . MINUS expression  (13)
	expression : expression . DIV expression  (14)
	expression : expression . TIMES expression  (15)
	expression : expression . DPLUS expression  (16)
	expression : expression . DMINUS expression  (17)
	expression : expression . DDIV expression  (18)
	expression : expression . DTIMES expression  (19)
	expression : expression . LT expression  (20)
	expression : expression . GT expression  (21)
	expression : expression . EQUALS expression  (22)
	expression : expression . LEQ expression  (23)
	expression : expression . GEQ expression  (24)
	expression : expression . DCOLON expression  (25)
	expression : expression . expression  (28)
	expression : expression . LOGICALAND expression  (29)
	expression : expression . LOGICALOR expression  (30)
	expression : RAISE expression .  (33)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	PLUS  shift 36
	MINUS  shift 37
	TIMES  shift 38
	DIV  shift 39
	DPLUS  shift 40
	DMINUS  shift 41
	DTIMES  shift 42
	DDIV  shift 43
	LT  shift 44
	GT  shift 45
	LEQ  shift 46
	GEQ  shift 47
	EQUALS  shift 48
	DCOLON  shift 50
	NIL  shift 10
	LET  shift 24
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	LOGICALAND  shift 51
	LOGICALOR  shift 52
	LPAREN  shift 15
	UNIT  shift 16
	HEAD  shift 17
	TAIL  shift 18
	FST  shift 19
	SND  shift 20
	DSEMI  reduce 33
	IN  reduce 33
	THEN  reduce 33
	ELSE  reduce 33
	RPAREN  reduce 33
	COMMA  reduce 33

	expression  goto 53
	atomic_expression  goto 23


state 31
	expression : LPAREN expression . RPAREN  (5)
	expression : LPAREN expression . COMMA expression RPAREN  (6)
	expression : expression . PLUS expression  (12)
	expression : expression . MINUS expression  (13)
	expression : expression . DIV expression  (14)
	expression : expression . TIMES expression  (15)
	expression : expression . DPLUS expression  (16)
	expression : expression . DMINUS expression  (17)
	expression : expression . DDIV expression  (18)
	expression : expression . DTIMES expression  (19)
	expression : expression . LT expression  (20)
	expression : expression . GT expression  (21)
	expression : expression . EQUALS expression  (22)
	expression : expression . LEQ expression  (23)
	expression : expression . GEQ expression  (24)
	expression : expression . DCOLON expression  (25)
	expression : expression . expression  (28)
	expression : expression . LOGICALAND expression  (29)
	expression : expression . LOGICALOR expression  (30)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	PLUS  shift 36
	MINUS  shift 37
	TIMES  shift 38
	DIV  shift 39
	DPLUS  shift 40
	DMINUS  shift 41
	DTIMES  shift 42
	DDIV  shift 43
	LT  shift 44
	GT  shift 45
	LEQ  shift 46
	GEQ  shift 47
	EQUALS  shift 48
	DCOLON  shift 50
	NIL  shift 10
	LET  shift 24
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	LOGICALAND  shift 51
	LOGICALOR  shift 52
	LPAREN  shift 15
	RPAREN  shift 60
	COMMA  shift 61
	UNIT  shift 16
	HEAD  shift 17
	TAIL  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	expression  goto 53
	atomic_expression  goto 23


32: shift/reduce conflict (shift 3, reduce 8) on INT
32: shift/reduce conflict (shift 4, reduce 8) on FLOAT
32: shift/reduce conflict (shift 5, reduce 8) on STRING
32: shift/reduce conflict (shift 6, reduce 8) on IDENT
32: shift/reduce conflict (shift 7, reduce 8) on TRUE
32: shift/reduce conflict (shift 8, reduce 8) on FALSE
32: shift/reduce conflict (shift 9, reduce 8) on NEG
32: shift/reduce conflict (shift 36, reduce 8) on PLUS
32: shift/reduce conflict (shift 37, reduce 8) on MINUS
32: shift/reduce conflict (shift 38, reduce 8) on TIMES
32: shift/reduce conflict (shift 39, reduce 8) on DIV
32: shift/reduce conflict (shift 40, reduce 8) on DPLUS
32: shift/reduce conflict (shift 41, reduce 8) on DMINUS
32: shift/reduce conflict (shift 42, reduce 8) on DTIMES
32: shift/reduce conflict (shift 43, reduce 8) on DDIV
32: shift/reduce conflict (shift 44, reduce 8) on LT
32: shift/reduce conflict (shift 45, reduce 8) on GT
32: shift/reduce conflict (shift 46, reduce 8) on LEQ
32: shift/reduce conflict (shift 47, reduce 8) on GEQ
32: shift/reduce conflict (shift 48, reduce 8) on EQUALS
32: shift/reduce conflict (shift 50, reduce 8) on DCOLON
32: shift/reduce conflict (shift 10, reduce 8) on NIL
32: shift/reduce conflict (shift 24, reduce 8) on LET
32: shift/reduce conflict (shift 12, reduce 8) on IF
32: shift/reduce conflict (shift 13, reduce 8) on FUN
32: shift/reduce conflict (shift 14, reduce 8) on RAISE
32: shift/reduce conflict (shift 51, reduce 8) on LOGICALAND
32: shift/reduce conflict (shift 52, reduce 8) on LOGICALOR
32: shift/reduce conflict (shift 15, reduce 8) on LPAREN
32: shift/reduce conflict (shift 16, reduce 8) on UNIT
32: shift/reduce conflict (shift 17, reduce 8) on HEAD
32: shift/reduce conflict (shift 18, reduce 8) on TAIL
32: shift/reduce conflict (shift 19, reduce 8) on FST
32: shift/reduce conflict (shift 20, reduce 8) on SND
state 32
	expression : HEAD expression .  (8)
	expression : expression . PLUS expression  (12)
	expression : expression . MINUS expression  (13)
	expression : expression . DIV expression  (14)
	expression : expression . TIMES expression  (15)
	expression : expression . DPLUS expression  (16)
	expression : expression . DMINUS expression  (17)
	expression : expression . DDIV expression  (18)
	expression : expression . DTIMES expression  (19)
	expression : expression . LT expression  (20)
	expression : expression . GT expression  (21)
	expression : expression . EQUALS expression  (22)
	expression : expression . LEQ expression  (23)
	expression : expression . GEQ expression  (24)
	expression : expression . DCOLON expression  (25)
	expression : expression . expression  (28)
	expression : expression . LOGICALAND expression  (29)
	expression : expression . LOGICALOR expression  (30)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	PLUS  shift 36
	MINUS  shift 37
	TIMES  shift 38
	DIV  shift 39
	DPLUS  shift 40
	DMINUS  shift 41
	DTIMES  shift 42
	DDIV  shift 43
	LT  shift 44
	GT  shift 45
	LEQ  shift 46
	GEQ  shift 47
	EQUALS  shift 48
	DCOLON  shift 50
	NIL  shift 10
	LET  shift 24
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	LOGICALAND  shift 51
	LOGICALOR  shift 52
	LPAREN  shift 15
	UNIT  shift 16
	HEAD  shift 17
	TAIL  shift 18
	FST  shift 19
	SND  shift 20
	DSEMI  reduce 8
	IN  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	RPAREN  reduce 8
	COMMA  reduce 8

	expression  goto 53
	atomic_expression  goto 23


33: shift/reduce conflict (shift 3, reduce 9) on INT
33: shift/reduce conflict (shift 4, reduce 9) on FLOAT
33: shift/reduce conflict (shift 5, reduce 9) on STRING
33: shift/reduce conflict (shift 6, reduce 9) on IDENT
33: shift/reduce conflict (shift 7, reduce 9) on TRUE
33: shift/reduce conflict (shift 8, reduce 9) on FALSE
33: shift/reduce conflict (shift 9, reduce 9) on NEG
33: shift/reduce conflict (shift 36, reduce 9) on PLUS
33: shift/reduce conflict (shift 37, reduce 9) on MINUS
33: shift/reduce conflict (shift 38, reduce 9) on TIMES
33: shift/reduce conflict (shift 39, reduce 9) on DIV
33: shift/reduce conflict (shift 40, reduce 9) on DPLUS
33: shift/reduce conflict (shift 41, reduce 9) on DMINUS
33: shift/reduce conflict (shift 42, reduce 9) on DTIMES
33: shift/reduce conflict (shift 43, reduce 9) on DDIV
33: shift/reduce conflict (shift 44, reduce 9) on LT
33: shift/reduce conflict (shift 45, reduce 9) on GT
33: shift/reduce conflict (shift 46, reduce 9) on LEQ
33: shift/reduce conflict (shift 47, reduce 9) on GEQ
33: shift/reduce conflict (shift 48, reduce 9) on EQUALS
33: shift/reduce conflict (shift 50, reduce 9) on DCOLON
33: shift/reduce conflict (shift 10, reduce 9) on NIL
33: shift/reduce conflict (shift 24, reduce 9) on LET
33: shift/reduce conflict (shift 12, reduce 9) on IF
33: shift/reduce conflict (shift 13, reduce 9) on FUN
33: shift/reduce conflict (shift 14, reduce 9) on RAISE
33: shift/reduce conflict (shift 51, reduce 9) on LOGICALAND
33: shift/reduce conflict (shift 52, reduce 9) on LOGICALOR
33: shift/reduce conflict (shift 15, reduce 9) on LPAREN
33: shift/reduce conflict (shift 16, reduce 9) on UNIT
33: shift/reduce conflict (shift 17, reduce 9) on HEAD
33: shift/reduce conflict (shift 18, reduce 9) on TAIL
33: shift/reduce conflict (shift 19, reduce 9) on FST
33: shift/reduce conflict (shift 20, reduce 9) on SND
state 33
	expression : TAIL expression .  (9)
	expression : expression . PLUS expression  (12)
	expression : expression . MINUS expression  (13)
	expression : expression . DIV expression  (14)
	expression : expression . TIMES expression  (15)
	expression : expression . DPLUS expression  (16)
	expression : expression . DMINUS expression  (17)
	expression : expression . DDIV expression  (18)
	expression : expression . DTIMES expression  (19)
	expression : expression . LT expression  (20)
	expression : expression . GT expression  (21)
	expression : expression . EQUALS expression  (22)
	expression : expression . LEQ expression  (23)
	expression : expression . GEQ expression  (24)
	expression : expression . DCOLON expression  (25)
	expression : expression . expression  (28)
	expression : expression . LOGICALAND expression  (29)
	expression : expression . LOGICALOR expression  (30)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	PLUS  shift 36
	MINUS  shift 37
	TIMES  shift 38
	DIV  shift 39
	DPLUS  shift 40
	DMINUS  shift 41
	DTIMES  shift 42
	DDIV  shift 43
	LT  shift 44
	GT  shift 45
	LEQ  shift 46
	GEQ  shift 47
	EQUALS  shift 48
	DCOLON  shift 50
	NIL  shift 10
	LET  shift 24
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	LOGICALAND  shift 51
	LOGICALOR  shift 52
	LPAREN  shift 15
	UNIT  shift 16
	HEAD  shift 17
	TAIL  shift 18
	FST  shift 19
	SND  shift 20
	DSEMI  reduce 9
	IN  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	RPAREN  reduce 9
	COMMA  reduce 9

	expression  goto 53
	atomic_expression  goto 23

